farstream (0.1.1-1) UNRELEASED; urgency=low

  * Initial upload of farstream
  * Packaging changed from farsight2 to farstream

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 04 Mar 2012 21:53:09 +0100

farsight2 (0.0.31-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 12 Oct 2011 17:40:45 +0100

farsight2 (0.0.30-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 16 Sep 2011 20:10:50 +0100

farsight2 (0.0.29-1) unstable; urgency=low

  * New upstream release.
  * debian/libgstfarsight0.10-0.symbols: Updated for new release.

 -- Jonny Lamb <jonny@debian.org>  Mon, 25 Jul 2011 15:59:56 +0100

farsight2 (0.0.28-1) unstable; urgency=low

  [ Laurent Bigonville ]
  * Use dh_python2 instead of python-central (Closes: #616804)
  * debian/control:
    - Bump cdbs build-dependency to (>= 0.4.90~)
    - Drop Build-dependency against python-central
    - Add Build-dependency against python-all-dev
    - Drop XB-Python-Version
    - Make python-farsight Provides ${python:Provides}
  * debian/rules:
    - Use python-autotools.mk instead of autotools.mk
    - Drop explicit call to dh_pycentral

  [ Sjoerd Simons ]
  * New upstream release
  * Bump build-deps on gst and gst-p-b to >= 0.10.33

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 14 May 2011 14:30:34 +0100

farsight2 (0.0.26-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Mon, 28 Feb 2011 18:45:27 +0000

farsight2 (0.0.24-2) unstable; urgency=low

  * Update symbols file
  * Install default codec and element preferences

 -- Sjoerd Simons <sjoerd@debian.org>  Mon, 14 Feb 2011 15:48:55 +0000

farsight2 (0.0.24-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 12 Feb 2011 14:05:53 +0000

farsight2 (0.0.23-1) unstable; urgency=low

  * New upstream release
  * Bump nice requirement build-dep to (>= 0.1.0)
  * Bump gstreamer0.10-nice dep to (>= 0.1.0>