@@ -1,4 +1,4 @@
-debian/tmp/usr/lib/libfarstream-0.1.so.*
-debian/tmp/usr/lib/gstreamer-0.10/*.so
-debian/tmp/usr/lib/farstream-0.1/*.so
-debian/tmp/usr/share/farstream/0.1/
+usr/lib/lib*.so.*
+usr/lib/farstream-0.1/*.so
+usr/share/farstream/0.1
+usr/lib/gstreamer-0.10/*.so
