@@ -1,4 +1,5 @@
-debian/tmp/usr/include/farstream-0.1
-debian/tmp/usr/lib/libfarstream-0.1.so
-debian/tmp/usr/lib/libfarstream-0.1.a
-debian/tmp/usr/lib/pkgconfig/farstream-0.1.pc
+usr/include/*
+usr/lib/lib*.a
+usr/lib/lib*.so
+usr/lib/pkgconfig/*
+usr/share/gir-1.0
